--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,17 @@ services:
   # 定义php-fpm容器
   php-fpm:
     image: nanoninja/php-fpm
+    container_name: php-fpm
     volumes:
       - "/Users/hujing/dir:/Users/hujing/dir"
     restart: always
     depends_on:
       - mysql
+      - redis
   # 定义nginx容器
   nginx:
     image: nginx
+    container_name: nginx
     depends_on:
       - php-fpm
     volumes:
@@ -23,6 +26,7 @@ services:
     restart: always
   mysql:
     image: mysql
+    container_name: mysql
     ports:
       - "3306:3306"
     volumes:
@@ -30,3 +34,16 @@ services:
       - ".config/mysql/config:/etc/mysql/conf.d"
     environment:
       MYSQL_ROOT_PASSWORD: 'root'
+    restart: always
+  redis:
+    image: redis
+    container_name: redis
+    ports: 
+      - "6379:6379"
+    volumes:
+      - "./config/redis/conf:/usr/local/etc/redis"
+      - "./config/redis/data:/data"
+      - "./config/redis/log:/log"
+    # 指定配置文件启动redis
+    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
+    restart: always
